--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,10 @@
 {
     "version": "2.0.0",
-    "command": "haxelib",
-    "args": ["run","travix","node"],
-    "problemMatcher": "$haxe"
+    "command": "haxe",
+    "args": ["dev.hxml"],
+    "problemMatcher": "$haxe",
+    "group": {
+        "kind": "build",
+        "isDefault": true
+    }
 }
